[package]
name = "asciimath-unicode"
version = "0.1.0"
description = "Convert asciimath to unicode"
license = "MIT"
repository = "https://github.com/erikbrinkman/asciimath-unicode-rs"
edition = "2021"

[[bin]]
name = "asciimath-unicode"
required-features = [ "binary" ]

[features]
binary = ["clap"]

[dependencies]
asciimath-parser = "0.1.1"
clap = { version = "4.1.4", optional = true, features = ["derive", "wrap_help"] }
emojis = "0.5.2"
lazy_static = "1.4.0"

[dev-dependencies]
rand = "0.8.5"
lazy_static = "1.4.0"
