[package]
name = "asciimath-unicode"
version = "0.1.4"
description = "Convert asciimath to unicode"
license = "MIT"
repository = "https://github.com/erikbrinkman/asciimath-unicode-rs"
edition = "2021"

[[bin]]
name = "asciimath-unicode"
required-features = [ "binary" ]

[features]
binary = ["clap"]

[dependencies]
asciimath-parser = "0.1"
clap = { version = "4.1", optional = true, features = ["derive", "wrap_help"] }
emojis = "0.6"
lazy_static = "1.4"

[dev-dependencies]
rand = "0.8"
lazy_static = "1.4"
