[package]
name = "asciimath-unicode"
version = "0.2.0"
description = "Convert asciimath to unicode"
license = "MIT"
repository = "https://github.com/erikbrinkman/asciimath-unicode-rs"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "asciimath-unicode"
required-features = ["binary"]

[features]
binary = ["clap"]

[dependencies]
asciimath-parser = "0.1"
clap = { version = "4.1", optional = true, features = ["derive", "wrap_help"] }
emojis = "0.8"
unicode-normalization = "0.1"
unicode-width = "0.2"

[dev-dependencies]
rand = "0.10"
